syntax = "proto3";
package timetable.v1;
option go_package = "github.com/HuynhHoangPhuc/myrmex/gen/go/timetable/v1;timetablev1";

import "core/v1/common.proto";
import "google/protobuf/timestamp.proto";

service SemesterService {
  rpc CreateSemester(CreateSemesterRequest) returns (CreateSemesterResponse);
  rpc GetSemester(GetSemesterRequest) returns (GetSemesterResponse);
  rpc ListSemesters(ListSemestersRequest) returns (ListSemestersResponse);
  rpc AddOfferedSubject(AddOfferedSubjectRequest) returns (AddOfferedSubjectResponse);
  rpc RemoveOfferedSubject(RemoveOfferedSubjectRequest) returns (RemoveOfferedSubjectResponse);
  rpc ListTimeSlots(ListTimeSlotsRequest) returns (ListTimeSlotsResponse);
}

message Semester {
  string id = 1;
  string name = 2;
  int32 year = 3;
  int32 term = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp end_date = 6;
  repeated string offered_subject_ids = 7;
  google.protobuf.Timestamp created_at = 8;
}

message CreateSemesterRequest {
  string name = 1;
  int32 year = 2;
  int32 term = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
}

message CreateSemesterResponse {
  Semester semester = 1;
}

message GetSemesterRequest {
  string id = 1;
}

message GetSemesterResponse {
  Semester semester = 1;
}

message ListSemestersRequest {
  core.v1.PaginationRequest pagination = 1;
}

message ListSemestersResponse {
  repeated Semester semesters = 1;
  core.v1.PaginationResponse pagination = 2;
}

message AddOfferedSubjectRequest {
  string semester_id = 1;
  string subject_id = 2;
}

message AddOfferedSubjectResponse {
  Semester semester = 1;
}

message RemoveOfferedSubjectRequest {
  string semester_id = 1;
  string subject_id = 2;
}

message RemoveOfferedSubjectResponse {
  Semester semester = 1;
}

message TimeSlot {
  string id = 1;
  string semester_id = 2;
  int32 day_of_week = 3;
  int32 start_period = 4;
  int32 end_period = 5;
}

message ListTimeSlotsRequest {
  string semester_id = 1;
}

message ListTimeSlotsResponse {
  repeated TimeSlot time_slots = 1;
}
